<resources>
    <string name="app_name">MovingAlarm</string>

    //key
    <string name="preference_file_key">ma.pref</string>
    <string name="hour_key">hour</string>
    <string name="minute_key">minute</string>
    <string name="onOFF_key">onOFF</string>
    <string name="trigger_time_key">trigger</string>
    <string name="latitude_key">latitude</string>
    <string name="longitude_key">longitude</string>
    <string name="limitTime_key">limitTime</string>

    // display
    <string name="main_title">Moving\nAlarm</string>
    <string name="SET">SET</string>
    <string name="SAVE">SAVE</string>
    <string name="days">Days of week</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

</resources>
