<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/set_time"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="showTimePickerDialog"
            android:textSize="36sp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/SAVE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.938" android:onClick="saveSetting"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/set_time" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" android:background="@android:color/darker_gray"
            app:layout_constraintVertical_bias="0.213"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="395dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/divider2"/>
    <TextView
            android:text="@string/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/days_title" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/divider3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.025" app:layout_constraintVertical_bias="0.103"/>
    <TextView
            android:text="@string/sunday"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:id="@+id/sun"
            app:layout_constraintTop_toBottomOf="@+id/divider2" android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/divider3"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/mon" android:onClick="setDays"/>
    <TextView
            android:text="@string/wednesday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/wed"
            app:layout_constraintTop_toTopOf="@+id/tue" app:layout_constraintBottom_toBottomOf="@+id/tue"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/tue"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/thu"
            android:onClick="setDays"/>
    <TextView
            android:text="@string/saturday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/sat"
            app:layout_constraintTop_toTopOf="@+id/fri"
            app:layout_constraintBottom_toBottomOf="@+id/fri" android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/fri" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:onClick="setDays"/>
    <TextView
            android:text="@string/thursday"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:id="@+id/thu"
            app:layout_constraintTop_toTopOf="@+id/wed" app:layout_constraintBottom_toBottomOf="@+id/wed"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/wed"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/fri"
            android:onClick="setDays"/>
    <TextView
            android:text="@string/monday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/mon"
            app:layout_constraintTop_toTopOf="@+id/sun"
            app:layout_constraintBottom_toBottomOf="@+id/sun"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/sun"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/tue"
            android:onClick="setDays"/>
    <TextView
            android:text="@string/tuesday"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:id="@+id/tue"
            app:layout_constraintTop_toTopOf="@+id/mon"
            app:layout_constraintBottom_toBottomOf="@+id/mon"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/mon"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/wed"
            android:onClick="setDays"/>
    <TextView
            android:text="@string/friday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/fri"
            app:layout_constraintTop_toTopOf="@+id/thu" app:layout_constraintBottom_toBottomOf="@+id/thu"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/thu"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/sat"
            android:onClick="setDays"/>
</androidx.constraintlayout.widget.ConstraintLayout>