<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:onClick="test"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.078"
            android:textAlignment="center" android:textColor="@color/fontBlack" android:textSize="40sp"
            android:id="@+id/textView"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="20dp" android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_time"
            android:text="asdf"
            android:textAlignment="center" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp" android:onClick="showTimePickerDialog" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/divider2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintVertical_bias="0.31"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/on_switch"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/set_time" app:layout_constraintBottom_toBottomOf="@+id/set_time"
            app:layout_constraintStart_toEndOf="@+id/set_time" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.83"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="52dp" app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.36"/>
    <TextView
            android:text="@string/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/days_title"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintVertical_bias="0.18"/>
    <TextView
            android:text="@string/sunday"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:id="@+id/sun"
            app:layout_constraintTop_toBottomOf="@+id/divider2" android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/divider3"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/mon" android:onClick="setDays"
            app:layout_constraintVertical_bias="0.64"/>
    <TextView
            android:text="@string/wednesday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/wed"
            app:layout_constraintTop_toTopOf="@+id/tue" app:layout_constraintBottom_toBottomOf="@+id/tue"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/tue"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/thu"
            android:onClick="setDays" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/saturday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/sat"
            app:layout_constraintTop_toTopOf="@+id/fri"
            app:layout_constraintBottom_toBottomOf="@+id/fri" android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/fri" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:onClick="setDays"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/thursday"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:id="@+id/thu"
            app:layout_constraintTop_toTopOf="@+id/wed" app:layout_constraintBottom_toBottomOf="@+id/wed"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/wed"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/fri"
            android:onClick="setDays" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/monday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/mon"
            app:layout_constraintTop_toTopOf="@+id/sun"
            app:layout_constraintBottom_toBottomOf="@+id/sun"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/sun"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/tue"
            android:onClick="setDays" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/tuesday"
            android:layout_width="49dp"
            android:layout_height="0dp"
            android:id="@+id/tue"
            app:layout_constraintTop_toTopOf="@+id/mon"
            app:layout_constraintBottom_toBottomOf="@+id/mon"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/mon"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/wed"
            android:onClick="setDays" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/friday"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:id="@+id/fri"
            app:layout_constraintTop_toTopOf="@+id/thu" app:layout_constraintBottom_toBottomOf="@+id/thu"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/thu"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/sat"
            android:onClick="setDays" app:layout_constraintVertical_bias="1.0"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.418"/>

    <fragment
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:id="@+id/main_map"
              android:layout_width="314dp"
              android:layout_height="237dp" android:layout_marginTop="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/divider3"
              android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>